fix image in contact for hero section tablet and desktop

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -223,7 +223,7 @@ textarea {
     background: url(../images/contacto_tablet.jpg);
     background-size: cover;
     background-image: no-repeat;
-    padding-top: 80px; }
+    top: 55px; }
   .form-container {
     display: flex;
     justify-content: center;
@@ -231,6 +231,12 @@ textarea {
     .form-container .input-box.submit {
       width: 150px;
       align-self: flex-end; } }
+
+@media (min-width: 1200px) {
+  .hero-container {
+    background-color: black;
+    background-position: right;
+    top: 60px; } }
 
 .code {
   font-size: 16px;
